# ReframeQ-backend

./: .dockerignore  .env  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
app/: main.py
app/api/: deps.py  router.py
app/api/admin/: router.py  routes_ai.py  routes_audit.py  routes_auth.py  routes_content.py  routes_family.py  routes_reports.py  routes_safety.py  routes_settings.py  routes_users.py
app/api/app_api/: router.py  routes_auth.py  routes_chat.py  routes_dashboard.py  routes_family.py  routes_moods.py  routes_onboarding.py  routes_onboarding_ai.py  routes_profile.py
app/core/: config.py  rbac.py  security.py
app/db/: init_db.py
app/models/: __init__.py  analytics_event.py  audit_log.py  chat_message.py  chat_thread.py  guardian_link.py  journey.py  mood_checkin.py  platform_setting.py  profile.py  user.py  user_detail.py  user_invite.py
app/schemas/: admin.py  auth.py  chat.py  dashboard.py  family.py  moods.py  onboarding.py  onboarding_ai.py  settings.py
app/scripts/: seed.py
app/services/: app_session_service.py  auth_service.py  emergency_support_service.py  mood_reporting.py  ollama_service.py  onboarding_ai_config_service.py  onboarding_ai_service.py
app/workers/: celery_app.py
tests/: test_mood_report_trends.py
